// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixContainer should render correctly 1`] = `
<div>
  <div
    class="w-full"
  />
</div>
`;

exports[`FluidContainer should render correctly 1`] = `
<div>
  <div
    class="xl:px-0 max-w-screen-xl mx-auto w-full bg-solid-red-900 px-general-lg md:px-general-xl"
  />
</div>
`;
